--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 *.mvn
 *.idea
 **/target
+*.env
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
