--- a/autoservices/cars/pom.xml
+++ b/autoservices/cars/pom.xml
@@ -35,6 +35,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.31.44</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
