--- a/autoservices/cars/pom.xml
+++ b/autoservices/cars/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.12.734</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
     </dependencies>
 
 </project>
